<resources>
    <string name="app_name">Organise-MOIs</string>
    <string name="Agenda">Agenda</string>
    <string name="today">today</string>
    <string name="fixed_work">Fixed work</string>
    <string name="eat">Lunch</string>
    <string name="work">Work</string>
    <string name="Sport">Sport</string>
    <string name="Wakeup">5. Wake up :</string>
    <string name="NBWork">1. Number of work hours per week :</string>
    <string name="NBOptWork">2. Optimal time of work before a break :</string>
    <string name="FixedWork">4. If you have some fixed working hours, you can set them on this button</string>
    <string name="FreeDay">3. As it is important to rest, select your free day (green = free day)</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Su</string>
    <string name="eatTime">"6. Select your lunch time: "</string>
    <string name="sport">7. Select your sport routine:</string>
    <string name="forgetWorkHour">You forgot to enter a number of work hour !</string>       <!--à changer dans profileactivity aussi-->
    <string name="forgetOptWorkHour">You forgot to enter your optimal working time before a break!</string>
    <string name="forgetWakeUp">You forgot to enter a wake up hour !</string>                <!-- à changer dans profileactivity aussi-->
    <string name="Saved">Correctly saved !</string>                                          <!--à changer dans profileactivity aussi-->
    <string name="accept">Please, read and accept the general condition of utilisation.</string>
    <string name="light">Light</string>
    <string name="moderated">Moderated</string>
    <string name="intense">Intense</string>
    <string name="utilisationCondition">General conditions of utilisation</string>
    <string name="same_day">Have you the same schedule for all your working days?</string>
    <string name="same_day_title">Same Schedule</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="channel_name">notification_channel</string>
    <string name="channel_description">notification</string>
    <!--<string name="key_enable_reminders" />-->
    <string name="morningRoutine">Morning Routine</string>
    <string name="sleep">Sleep</string>
    <string name="pause">Pause</string>
    <string name="minutes">In 15min</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="wrongwakeUp">The wake up hour is not valid ! (e.g 8:00)</string>
    <string name="wrongnbWorkHours">The number of work hours is not valid ! It could maximum be 70:00.</string>
    <string name="wrongnbOptWorkHours">The optimal work time before a break is not valid ! It should be between 0:30 and 2:00.</string>
    <string name="allFreeDay">Why did you install this app ? Set at least one working day !</string>
    <string name="notif_sport_easy">Could be good to walk for example.</string>
    <string name="notif_sport_hard">Could be good to run for example.</string>
    <string name="next_day">Next Day</string>
    <string name="bad_parameters">The parameters you enter didn\'t allow the generation of a correct planning. \n Please free your time.</string>
    <string name="too_lots_of_fixedwork">The number of work hours per week you enter is smaller than your quantity of fixed work. \n Please correct it.</string>
    <string name="newEvent">You can create a new event from here.</string>
    <string name="eventName">Name of the event</string>
    <string name="eventNameExample">Ex: Shopping</string>
    <string name="eventStartExample">Ex: 17:15</string>
    <string name="eventStopExample">Ex: 18:15</string>
    <string name="eventStart">Enter the start time of youre activity.</string>
    <string name="eventStop">Enter the end time of youre activity.</string>
    <string name="colorChoice">Choose the color of the event :</string>
    <string name="confirm">Confirm</string>
    <string name="nameChosen">The name chosen is : </string>
    <string name="wrongEventStart">The start time isn\'t at a good format. Ex: 17:15</string>
    <string name="wrongEventStop">The stop time isn\'t at a good format. Ex: 18:15</string>
    <string name="forgetEventName">Please, enter an event name first.</string>
    <string name="forgetEventStart">Please, enter an event start time first.</string>
    <string name="forgetEventStop">Please, enter an event stop time first.</string>
    <string name="wrongEventStartStop">The starting time should be earlier than the end time.</string>
    <string name="isWork">Work</string>
    <string name="isSport">Sport</string>
    <string name="isFree">Free time</string>
    <string name="isWorkSportFree">Is this activity work, sport or free time ?</string>
    <string name="eventWeekly">Is this a weekly activity?</string>
    <string name="workCatchUp">Work catch up</string>
    <string name="sportCatchUp">Sport catch up</string>
    <string name="sportTime">Sport time !</string>
    <string name="workTime">Work time !</string>
    <string name="sportCatchUpTime">Catch up sport time !</string>
    <string name="workCatchUpTime">Catch up work time !</string>
    <string name="lastChance">This is youre last chance to catch up.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eat_notif">Time to eat :p</string>
    <string name="check_notif">Go Check in the application</string>
    <string name="do_break_notif">Take a break, you deserve it :)</string>
    <string name="time_sleep">Time to sleep</string>
    <string name="go_to_bed_notif">If you want to sleep 8h you should go to bed now.</string>
    <string name="awake_notif">I am awake</string>
    <string name="wakeup_notif">WAKE UP !</string>

    <!--
    <string name="app_name">Agenda_LauzHack</string>
    <string name="Agenda">Agenda</string>
    <string name="today">Aujourd\'hui</string>
    <string name="fixed_work">Travail - fixé</string>
    <string name="eat">Repas</string>
    <string name="work">Travail</string>
    <string name="Sport">Sport</string>
    <string name="Wakeup">Réveil :</string>
    <string name="NBWork">Nombre d\'heure de travail par semaine :</string>
    <string name="FixedWork">Si vous avez un horaire de travail fixe, vous pouvez le rentrer sur ce bouton -></string>
    <string name="FreeDay">Car il est important de se reposer, sélectionnez le(s) jour(s) de repos :  (vert = jour(s) de repos)</string>
    <string name="monday">Lu</string>
    <string name="tuesday">Ma</string>
    <string name="wednesday">Me</string>
    <string name="thursday">Je</string>
    <string name="friday">Ve</string>
    <string name="saturday">Sa</string>
    <string name="sunday">Di</string>
    <string name="eatTime">Selectionner vos heures de repas (1h30 pour le diner et 1h30 pour le souper)- ></string>
    <string name="sport">Selectionner votre routine sportive</string>
    <string name="forgetWorkHour"> Vous avez oublié d\'entrer un nombre d\'heure de travail !</string>       à changer dans profileactivity aussi
    <string name="forgetWakeUp">Vous avez oublié d\'entrer une heure de réveil !</string>                 à changer dans profileactivity aussi
    <string name="Saved">Correctement sauvegardé !</string>                                           à changer dans profileactivity aussi
    -->
</resources>
