<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:layout_editor_absoluteX="1dp"
tools:layout_editor_absoluteY="1dp"
android:background="@color/lightBlue"
tools:context=".ProfileActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/backToMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:onClick="clickedBackToMenuButtonXmlCallback"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:clickable="true"
            android:onClick="clickedSaveProfileButtonXmlCallback"
            android:focusable="true"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/NBWorkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NBWork"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/NBWorkEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:inputType="number"
            android:layout_weight="2"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/FixedWorkTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FixedWork"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />


        <ImageButton
            android:id="@+id/setFixedWorkButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:background="@color/lightBlue"
            android:onClick="clickedSetFixedWorkButtonXmlCallback"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <Space
    android:layout_width="match_parent"
    android:layout_height="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/FreeDayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FreeDay"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/monday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/monday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/tuesday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/tuesday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/wednesday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/wednesday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/thursday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/thursday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/friday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/friday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/saturday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/saturday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />

        <Button
            android:id="@+id/sunday"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@color/lightBlue"
            android:onClick="clickedDayButtonXmlCallback"
            android:text="@string/sunday"
            android:textColor="@color/green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/WakeupTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Wakeup"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/WakeupEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text=""
            android:inputType="time"
            android:layout_weight="2"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/eatTimeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eatTime"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />


        <ImageButton
            android:id="@+id/setEatTimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:background="@color/lightBlue"
            android:onClick="clickedSetEatTimeButtonXmlCallback"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/SportTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sport"
            android:layout_weight="1"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <ImageButton
            android:id="@+id/koala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/red"
            android:onClick="clickedSportButtonXmlCallback"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <ImageButton
            android:id="@+id/rabbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/green"
            android:onClick="clickedSportButtonXmlCallback"
            app:srcCompat="@android:drawable/ic_media_play" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <ImageButton
            android:id="@+id/leopard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@color/red"
            android:onClick="clickedSportButtonXmlCallback"
            app:srcCompat="@android:drawable/ic_media_ff" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

    </LinearLayout>


</LinearLayout>